# robocop-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  tasks.py
.github/workflows/: pull_request.yml  release.yml
atest/: test_10.robot  test_2.robot  test_4.robot  test_5.robot  test_6.robot  test_7.robot  test_8.robot  test_9.robot
atest/rules/: NAME07.md
src/robocop_mcp/: __init__.py  __main__.py  config.py  mcp_check.py  mcp_format.py  server.py
src/robocop_mcp/rules/: __init__.py
utest/: conftest.py  data.py  test_get_robocop_report.py  test_get_robocop_report.test_get_robocop_report_applies_rule_priority_ordering.approved.txt  test_get_robocop_report.test_get_robocop_report_with_missing_robocop_mcp_config.approved.txt  test_get_robocop_report.test_get_robocop_report_with_only_robocop_config_file.approved.txt  test_get_violation_fix.py  test_robocop_check.py  test_robocop_format.py  test_robocop_format.test_run_robocop_format_with_exception.approved.txt  test_robocop_format.test_run_robocop_format_with_path.approved.txt  test_server.py  test_server.test_get_robocop_report_no_config.approved.txt  test_server.test_get_robocop_report_no_violations.approved.txt  test_server.test_get_robocop_report_robocop_toml.approved.txt  test_server.test_get_robocop_report_with_rule_priority.approved.txt  test_server.test_get_robocop_report_with_sample_file.approved.txt  test_server.test_get_robocop_report_with_sample_file_and_rule_as_file.approved.txt
