[project]
name = "robocop-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.21.1",
    "robotframework-robocop>=6.10.0",
]

[dependency-groups]
dev = [
    "approvaltests>=15.3.2",
    "coverage>=7.11.3",
    "invoke>=2.2.1",
    "pytest>=9.0.1",
    "pytest-approvaltests>=0.2.4",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.5",
]
