[project]
name = "robocop-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.21.1",
    "robotframework-robocop>=6.10.0",
]

[dependency-groups]
dev = [
    "approvaltests>=15.3.2",
    "coverage>=7.11.3",
    "invoke>=2.2.1",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-approvaltests>=0.2.4",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.5",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "ERA",
    "FAST",
    "YTT",
    "ANN",
    "ASYNC",
    "S",
    "BLE",
    "FBT",
    "B",
    "A",
    "C4",
    "DTZ",
    "T10",
    "EM",
    "EXE",
    "FIX",
    "INT",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "SLOT",
    "TID",
    "ARG",
    "PTH",
    "FLY",
    "I",
    "C90",
    "NPY",
    "N",
    "PERF",
    "E",
    "W",
    "F",
    "PL",
    "FURB",
    "RUF",
    "TRY"
]
ignore = [

]


[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"utest/*" = [
    "ANN001",
    "ANN201",
    "I001",
    "PLR2004",
    "S101",
]
"tasks.py" = [
    "ANN201",
    "FBT001",
    "FBT002",
    "T201",
]
